# kwa_absbox

./: .gitignore  deal_data.py  postcreatecommand.sh  pyproject.toml
.devcontainer/: devcontainer.json
absbox/: __init__.py  client.py  validation.py
absbox/local/: china.py  component.py  generic.py  util.py
absbox/tests/benchmark/china/scenario/: rates.json
